--- a/templates/cart.html
+++ b/templates/cart.html
@@ -72,6 +72,7 @@
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
         <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y}&nbsp;&nbsp;&nbsp;</li>
+        <button id = "edit_">Remove</button>
         <button id = "edit_">Edit</button>
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
     </ul>
