--- a/templates/cart.html
+++ b/templates/cart.html
@@ -43,7 +43,7 @@
             background-color: black;
             color: white;   
         }
-        #edit_:hover, #checkout:hover {
+        #edit_:hover, #checkout:hover, #remove:hover {
             background-color: white;
             color: black;
             cursor: pointer;
@@ -62,6 +62,17 @@
             background-color: black;
             color: white;
         }
+
+        #remove {
+            float: right;
+            margin-right: 125px;
+            margin-top: -12px;
+            font-size: 19px;
+            width: 120px;
+            height: 45px;
+            background-color: black;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -72,7 +83,7 @@
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
         <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y}&nbsp;&nbsp;&nbsp;</li>
-        <button id = "edit_">Remove</button>
+        <button id = "remove">Remove</button>
         <button id = "edit_">Edit</button>
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
     </ul>
