--- a/templates/cart.html
+++ b/templates/cart.html
@@ -18,6 +18,7 @@
             border-bottom: 1px solid gray;
         }
         ul {
+            display: inline-block;
             font-size: 20px;
             list-style: none;
             width: 900px;
