--- a/templates/cart.html
+++ b/templates/cart.html
@@ -76,8 +76,9 @@
         }
 
         #checkbox {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
+            margin-top: 10px;
         }
     </style>
 </head>
