--- a/templates/cart.html
+++ b/templates/cart.html
@@ -78,7 +78,8 @@
         #checkbox {
             width: 40px;
             height: 40px;
-            margin-top: 10px;
+            margin-top: 15px;
+            margin-left: 5px;
         }
     </style>
 </head>
