--- a/templates/cart.html
+++ b/templates/cart.html
@@ -76,6 +76,7 @@
         }
 
         #checkbox {
+            float: right;;
             width: 50px;
             height: 50px;
             margin-top: 30px;
