--- a/templates/cart.html
+++ b/templates/cart.html
@@ -76,10 +76,11 @@
         }
 
         #checkbox {
-            float: right;;
+            float: right;
             width: 50px;
             height: 50px;
-            margin-top: 30px;
+            margin-top: 35px;
+            margin-right: 100px;
             margin-left: 15px;
         }
     </style>
