--- a/templates/cart.html
+++ b/templates/cart.html
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div id="orders_body">
-    <h2>Items in Cart:</h2>
+    <h2>Items in Cart:<h3>Pick</h3></h2>
     <div v-for='item in order_list'>
     <ul > 
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
