--- a/templates/cart.html
+++ b/templates/cart.html
@@ -83,6 +83,10 @@
             margin-right: 80px;
             margin-left: 15px;
         }
+
+        h3 {
+            float: right;;
+        }
     </style>
 </head>
 <body>
