--- a/templates/cart.html
+++ b/templates/cart.html
@@ -84,14 +84,12 @@
             margin-left: 15px;
         }
 
-        h3 {
-            float: right;;
-        }
+      
     </style>
 </head>
 <body>
     <div id="orders_body">
-    <h2>Items in Cart:<h3>Pick</h3></h2>
+    <h2>Items in Cart: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pick</h2>
     <div v-for='item in order_list'>
     <ul > 
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
