--- a/templates/cart.html
+++ b/templates/cart.html
@@ -101,7 +101,7 @@
         <li>Item: {item.name},&nbsp;&nbsp;&nbsp;</li> 
         <li>Amount: {item.amount},&nbsp;&nbsp;&nbsp;</li>
         <li>Address: X.{item.address_x} &nbsp; Y.{item.address_y}&nbsp;&nbsp;&nbsp;</li>
-        <button id = "remove">Remove</button>
+        <button id = "remove" @click="remove(item.order_id)">Remove</button>
         <button id = "edit_">Edit</button>
         
         <!-- <button id="edit_" @click="view(item.id, false)">View</button> -->
@@ -141,6 +141,24 @@
                 });
             },
             methods: {
+                remove: function(order_id) {
+                    that = this;
+                    axios.get("/remove_from_cart/"+order_id).then(function(response) {
+                    if (response.data.status_code == 1) {
+                        alert("Please log in first!")
+                        return
+                    } else if (response.data.status_code == 2) {
+                        alert("Error: you do not have this item in your cart!")
+                        return
+                    } else {
+                        alert("Removed!")
+                        location.href = "cart.html"
+                    }
+                }).catch(function(err) {
+                    alert('Error');
+                });
+
+                },
                 view: function(oid, is_confirmed) {
                     that = this;
                     axios.get("view/"+oid).then(function(response) {
