--- a/templates/cart.html
+++ b/templates/cart.html
@@ -182,7 +182,7 @@
                         alert("Error: please only pick items from your cart!")
                         return
                     } else {
-                        alert("Removed!")
+                        alert("Order(s) submitted!")
                         location.href = "cart.html"
                     }
                     }).catch(function(err) {
