--- a/templates/edit_order.html
+++ b/templates/edit_order.html
@@ -152,13 +152,13 @@
                         alert("Address cannot be empty!")
                         return
                     }
-                    axios.get("add/"+that.product_id+"/"+that.amount+"/"+that.address_x+"/"+that.address_y).then(function(response) {
+                    axios.get("change_order_info/"+that.order_id+"/"+that.amount+"/"+that.address_x+"/"+that.address_y).then(function(response) {
                         if (response.data.status_code == 1) {
                             alert("Please log in first!");
                             location.href = "login.html"
                         } else if (response.data.status_code == 2) {
-                            alert("Item does not exist.")
-                            location.href = "catalog.html" 
+                            alert("You do not own this order!")
+                            location.href = "cart.html" 
                         } else {
                             alert("Added to Cart!")
                             location.href = "cart.html"
