--- a/templates/edit_order.html
+++ b/templates/edit_order.html
@@ -160,7 +160,7 @@
                             alert("You do not own this order!")
                             location.href = "cart.html" 
                         } else {
-                            alert("Added to Cart!")
+                            alert("Change submitted!")
                             location.href = "cart.html"
                         }
                     }).catch(function(err) {
