--- a/templates/edit_order.html
+++ b/templates/edit_order.html
@@ -82,7 +82,7 @@
 <body>
     <div id="secret_signup">
         <div id="app">
-            <h2>Confirm Your Order
+            <h2>Edit Your Order
             </h2>
             <div id="request">
                 Name: &nbsp;<input id="u"type="text" v-model="name" disabled><br>
