--- a/templates/edit_order.html
+++ b/templates/edit_order.html
@@ -89,7 +89,7 @@
                 Desc.: &nbsp;<input id="p" type="text" v-model="description" disabled required><br>
                 Amount: &nbsp;<input id="e" type="number" v-model="amount" required max="100"><br>
                 Your Address: &nbsp;X.&nbsp;<input type="number" v-model="address_x" required > &nbsp;&nbsp;&nbsp; Y.&nbsp;&nbsp;<input type="number" v-model="address_y" required><br>
-            
+                UPS Account Name(Optional): &nbsp;<input id="e" type="test" v-model="ups_account_name"><br>
 
                 <button id = "c" @click="cancel">Cancel</button>
                 <button id = "a" @click="remove">Remove Item</button>
@@ -111,6 +111,7 @@
                 amount: '',
                 address_x: '',
                 address_y: '',
+                ups_account_name: '',
                 
             },
             mounted: function() {
@@ -129,6 +130,9 @@
                             that.amount = response.data[0].fields.amount
                             that.address_x = response.data[0].fields.address_x
                             that.address_y = response.data[0].fields.address_y
+                            if (response.data[0].fields.ups_account_name != "DEFAULT_NOT_SET") {
+                                that.ups_account_name = response.data[0].fields.ups_account_name
+                            }
                         }
                     }).catch(function(err) {
                         alert('Error');
@@ -152,7 +156,8 @@
                         alert("Address cannot be empty!")
                         return
                     }
-                    axios.get("change_order_info/"+that.order_id+"/"+that.amount+"/"+that.address_x+"/"+that.address_y).then(function(response) {
+                    ups = that.ups_account_name == "" ? "DEFAULT_NOT_SET" : that.ups_account_name
+                    axios.get("change_order_info/"+that.order_id+"/"+that.amount+"/"+that.address_x+"/"+that.address_y+"/"+ups).then(function(response) {
                         if (response.data.status_code == 1) {
                             alert("Please log in first!");
                             location.href = "login.html"
