--- a/templates/catalog_fancy.html
+++ b/templates/catalog_fancy.html
@@ -84,13 +84,6 @@
             padding-left: -10px;
             padding-top: 14px;
         }
-
-        #items {
-            display: inline-block;
-            width: 250px;
-            height: 300px;
-            
-        }
     </style>
 </head>
     
@@ -101,12 +94,12 @@
     <button @click="search">Search</button><br>
     <p>You found {items.length} items.</p>
     <div id="result">
-        <div id="items" v-for='(item, i) in items'>
-            <img v-bind:src=item.img_url>
-            <li>{item.name}</li>
-            <li>{item.description}</li>
+        <ul v-for='(item, i) in items'>
+            <li>Name: {item.name}</li>&nbsp;&nbsp;&nbsp; <b>|</b>
+            <li>Desc.: {item.description}</li>&nbsp;
+            <br>
             <button id="confirm_" @click="buy(item.product_id)">Buy</button>
-        </div>
+        </ul>
     </div>
     </div>
     <script>
