--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -91,6 +91,11 @@
             height: 300px;
             
         }
+
+        img {
+            width: 200px;
+            height: 300px;
+        }
     </style>
 </head>
     
