--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -89,11 +89,13 @@
             display: inline-block;
             width: 250px;
             height: 300px;
+            background-color: #ccc;
+            margin-right: 20px;
             
         }
 
         img {
-            width: 200px;
+            width: 250px;
             height: 300px;
         }
     </style>
