--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -87,16 +87,16 @@
 
         #items {
             display: inline-block;
-            width: 250px;
+            width: 220px;
             height: 300px;
-            background-color: #ccc;
-            margin-right: 20px;
+            background-color: #aaa;
+            margin-right: 15px;
             
         }
 
         img {
-            width: 250px;
-            height: 300px;
+            width: 220px;
+            height: 250px
         }
     </style>
 </head>
