--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -88,7 +88,7 @@
         #items {
             display: inline-block;
             width: 220px;
-            height: 300px;
+            height: 400px;
             background-color: #aaa;
             margin-right: 15px;
             
@@ -97,6 +97,10 @@
         img {
             width: 220px;
             height: 250px
+        }
+
+        li {
+            list-style: none;
         }
     </style>
 </head>
