--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -88,8 +88,8 @@
         #items {
             display: inline-block;
             width: 220px;
-            height: 400px;
-            background-color: #aaa;
+            height: 350px;
+            background-color: #ddd;
             margin-right: 15px;
             
         }
