--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -90,7 +90,8 @@
             width: 240px;
             height: 350px;
             background-color: #ddd;
-            margin-right: 25px;
+            margin-left: 5px;
+            margin-right: 20px;
             
         }
 
