--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -91,7 +91,8 @@
             height: 350px;
             background-color: #ddd;
             margin-left: 5px;
-            margin-right: 20px;
+            margin-right: 22px;
+            margin-bottom: 20px;
             
         }
 
