--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -104,7 +104,7 @@
 
         li {
             list-style: none;
-            margin-left: 3px;
+            margin-left: 10px;
         }
     </style>
 </head>
@@ -118,7 +118,7 @@
     <div id="result">
         <div id="items" v-for='(item, i) in items'>
             <img v-bind:src=item.img_url>
-            <li><b>{item.name}</b>></li>
+            <li><b>{item.name}</b></li>
             <li>{item.description}</li>
             <button id="confirm_" @click="buy(item.product_id)">Buy</button>
         </div>
