--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -89,11 +89,12 @@
         #items {
             display: inline-block;
             width: 240px;
-            height: 350px;
+            height: 400px;
             background-color: #ddd;
             margin-left: 5px;
             margin-right: 21px;
             margin-bottom: 20px;
+            margin-top: 20px;
             
         }
 
