--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -94,7 +94,7 @@
             margin-left: 5px;
             margin-right: 21px;
             margin-bottom: 20px;
-            margin-top: 20px;
+            padding-top: 20px;
             
         }
 
