--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -91,7 +91,7 @@
             display: inline-block;
             width: 240px;
             height: 370px;
-            background-color: #ddd;
+            background-color: #eee;
             margin-left: 5px;
             margin-right: 21px;
             margin-bottom: 20px;
@@ -101,6 +101,7 @@
 
         #items:hover {
             box-shadow: 0px 0px 20px -4px rgba(0, 0,0, 0.3);
+            cursor: pointer;
         }
 
         img {
