--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -78,6 +78,10 @@
         }
 
         img {
+            text-align: center;
+            width: 200px;
+            height: 250px;
+
             
         }
         
