--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -78,9 +78,9 @@
         }
 
         img {
+            display: inline-block;
             text-align: center;
-            width: 200px;
-            height: 250px;
+
 
             
         }
