--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -93,7 +93,7 @@
             <h2>Confirm Your Order
             </h2>
             <div id="request">
-                <img v-bind:src="img_url">
+                <img v-bind:src="img_url"><br>
                 Name: &nbsp;<input id="u"type="text" v-model="name" disabled><br>
                 Desc.: &nbsp;<input id="p" type="text" v-model="description" disabled required><br>
                 Amount: &nbsp;<input id="e" type="number" v-model="amount" required max="100"><br>
