--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -80,6 +80,9 @@
         img {
             display: inline-block;
             text-align: center;
+            width: 80%;
+            height: 80%;
+            margin-top: 10px;
 
 
             
